Apply OpenRewrite changes